# cookiecutter-data-science

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  pyproject.toml
{{ cookiecutter.repo_name }}/components/: evaluate_model.yml  model_selection.yml  train_test_split.yml
{{ cookiecutter.repo_name }}/deployment/batch/: create_batch_deployment.py  invoke_batch_endpoint.ipynb  invoke_with_rest.py  register_scoring_data.py
{{ cookiecutter.repo_name }}/deployment/online/: invoke_online_endpoint.ipynb  invoke_with_rest.py
{{ cookiecutter.repo_name }}/pipeline/: conda.yml  create_environment.py  register_training_data.py  run_pipeline.py
{{ cookiecutter.repo_name }}/pipeline/src/: evaluate_model.py  model_selection.py  train_test_split.py
{{ cookiecutter.repo_name }}/pipeline/src/utils/: data_exchange.py
{{ cookiecutter.repo_name }}/setup/: create_data.ipynb  upload_data.py
