[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}}"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
python-dotenv = "^0.21.1"
ipykernel = "^6.21.2"
pre-commit = "^3.0.4"
sphinx = "^6.1.3"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
