[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}}"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
pre-commit = "^3.0.4"
ipykernel
sphinx
azure-ai-ml
azure-identity
azure-storage-blob
mlflow
azureml-mlflow
seaborn
python-dotenv

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
